news-api-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-api
  labels:
    app: news-api
spec:
  selector:
    matchLabels:
      app: news-api
  template:
    metadata:
      labels:
        app: news-api
    spec:
      containers:
      - name: news-api
        image: quay.io/kuadrant/authorino-examples:news-api
        imagePullPolicy: IfNotPresent
        env:
        - name: PORT
          value: "3000"
        tty: true
        ports:
        - containerPort: 3000
      - name: envoy
        image: envoyproxy/envoy:v1.19-latest
        imagePullPolicy: IfNotPresent
        command:
        - /usr/local/bin/envoy
        args:
        - --config-path /usr/local/etc/envoy/envoy.yaml
        - --service-cluster front-proxy
        - --log-level info
        - --component-log-level filter:trace,http:debug,router:debug
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /usr/local/etc/envoy
          name: config
          readOnly: true
      volumes:
      - configMap:
          items:
          - key: envoy.yaml
            path: envoy.yaml
          name: envoy
        name: config
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: news-api
  labels:
    app: news-api
spec:
  selector:
    app: news-api
  ports:
  - name: envoy
    port: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-api
  labels:
    app: news-api
spec:
  rules:
  - host: news-api.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: news-api
            port:
              number: 8000
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
  labels:
    app: envoy
data:
  envoy.yaml: |
    static_resources:
      clusters:
      - name: news-api
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: news-api
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 3000
      - name: authorino
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        load_assignment:
          cluster_name: authorino
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: authorino-authorino-authorization
                    port_value: 50051
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: local
              route_config:
                name: news-api
                virtual_hosts:
                - name: news-api
                  domains: ['*']
                  routes:
                  - match: { prefix: / }
                    route:
                      cluster: news-api
              http_filters:
              - name: envoy.filters.http.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  transport_api_version: V3
                  failure_mode_allow: false
                  include_peer_certificate: true
                  grpc_service:
                    envoy_grpc:
                      cluster_name: authorino
                    timeout: 1s
              - name: envoy.filters.http.router
                typed_config: {}
              use_remote_address: true
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
